Fix some errros in nextjs build

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "resolutions": {
     "terser": "3.14.1"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "dependencies": {
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
