--- a/package.json
+++ b/package.json
@@ -62,11 +62,10 @@
     "web3": "1.0.0-beta.37"
   },
   "scripts": {
-    "dev": "NODE_ENV=development node lib/index.js",
-    "start:dev": "npm run compile-server && npm run dev",
+    "dev": "npm run compile-server && node lib/index.js",
     "build": "next build",
     "export": "next export -o build",
-    "start": "NODE_ENV=production node lib/index.js",
+    "start": "NODE_ENV=production npm run compile-server && node lib/index.js",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
     "compile-server": "rimraf lib/ && babel -d lib/ server/",
