--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "resolutions": {
     "terser": "3.14.1"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "dependencies": {
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
@@ -36,7 +39,7 @@
     "less": "3.9.0",
     "lint": "1.1.2",
     "multer": "1.4.1",
-    "next": "8.1.1-canary.51",
+    "next": "9.3.3",
     "node-sass-chokidar": "1.3.4",
     "nodemon": "1.18.10",
     "preact": "^10.0.0-beta.2",
