--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
     "@mybit/network.js": "0.0.51",
+    "@sentry/browser": "^5.19.2",
+    "@sentry/webpack-plugin": "^1.12.0",
     "@zeit/next-bundle-analyzer": "0.1.2",
     "@zeit/next-css": "1.0.1",
+    "@zeit/next-source-maps": "0.0.4-canary.1",
     "airtable": "0.5.8",
     "antd": "3.13.6",
     "aws-sdk": "2.366.0",
@@ -63,7 +66,7 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development node lib/index.js",
-    "build": "next build",
+    "build": "next build && npm run export",
     "export": "next export -o build",
     "start": "NODE_ENV=production node lib/index.js",
     "lint": "eslint --ignore-path .gitignore .",
