--- a/.babelrc
+++ b/.babelrc
@@ -1,65 +1,142 @@
 {
   "env": {
     "test": {
-      "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]],
-      "plugins": [
-      ["module-resolver", {
-          "root": ["./src"],
-          "alias": {
-            "static": "./static",
-            "components": "./components",
-            "constants": "./constants",
-            "utils": "./utils",
-            "ui": "./components/UI",
-            "hooks": "./hooks",
+      "presets": [
+        [
+          "next/babel",
+          {
+            "preset-env": {
+              "modules": "commonjs"
+            }
           }
-        }],
-        ["styled-components", {"ssr": true, "displayName": true, "preprocess": false }],
-        ["inline-react-svg" ],
-        ["transform-assets-import-to-string", {"baseDir": "static","baseUri": "/" }],
-        ["react-hot-loader/babel"]
+        ]
+      ],
+      "plugins": [
+        [
+          "module-resolver",
+          {
+            "root": [
+              "./src"
+            ],
+            "alias": {
+              "static": "./static",
+              "components": "./components",
+              "constants": "./constants",
+              "utils": "./utils",
+              "ui": "./components/UI",
+              "hooks": "./hooks",
+            }
+          }
+        ],
+        [
+          "styled-components",
+          {
+            "ssr": true,
+            "displayName": true,
+            "preprocess": false
+          }
+        ],
+        [
+          "inline-react-svg"
+        ],
+        [
+          "transform-assets-import-to-string",
+          {
+            "baseDir": "static",
+            "baseUri": "/"
+          }
+        ],
+        [
+          "react-hot-loader/babel"
+        ]
       ]
     },
     "development": {
-      "presets": ["next/babel"],
+      "presets": [
+        "next/babel"
+      ],
       "plugins": [
-        ["module-resolver", {
-          "root": ["./src"],
-          "alias": {
-            "static": "./static",
-            "components": "./components",
-            "constants": "./constants",
-            "utils": "./utils",
-            "ui": "./components/UI",
-            "hooks": "./hooks",
+        [
+          "module-resolver",
+          {
+            "root": [
+              "./src"
+            ],
+            "alias": {
+              "static": "./static",
+              "components": "./components",
+              "constants": "./constants",
+              "utils": "./utils",
+              "ui": "./components/UI",
+              "hooks": "./hooks",
+            }
           }
-        }],
-        ["import", {"libraryName": "antd","style": "less"}],
-        ["styled-components", {"ssr": true, "displayName": true, "preprocess": false }],
-        ["inline-react-svg" ],
-        ["transform-assets-import-to-string", {"baseDir": "static","baseUri": "/" }],
-        ["react-hot-loader/babel"]
+        ],
+        [
+          "styled-components",
+          {
+            "ssr": true,
+            "displayName": true,
+            "preprocess": false
+          }
+        ],
+        [
+          "inline-react-svg"
+        ],
+        [
+          "transform-assets-import-to-string",
+          {
+            "baseDir": "static",
+            "baseUri": "/"
+          }
+        ],
+        [
+          "react-hot-loader/babel"
+        ]
       ]
     },
     "production": {
-      "presets": ["next/babel"],
+      "presets": [
+        "next/babel"
+      ],
       "plugins": [
-        ["module-resolver", {
-          "root": ["./src"],
-          "alias": {
-            "static": "./static",
-            "components": "./components",
-            "constants": "./constants",
-            "utils": "./utils",
-            "ui": "./components/UI",
-            "hooks": "./hooks",
+        [
+          "module-resolver",
+          {
+            "root": [
+              "./src"
+            ],
+            "alias": {
+              "static": "./static",
+              "components": "./components",
+              "constants": "./constants",
+              "utils": "./utils",
+              "ui": "./components/UI",
+              "hooks": "./hooks",
+            }
           }
-        }],
-        ["import", {"libraryName": "antd","style": "less"}],
-        ["styled-components", {"ssr": true, "displayName": true, "preprocess": false }],
-        ["inline-react-svg" ],
-        ["transform-assets-import-to-string", {"baseDir": "static","baseUri": "/" }],
-        ["transform-remove-console"]
+        ],
+        [
+          "styled-components",
+          {
+            "ssr": true,
+            "displayName": true,
+            "preprocess": false
+          }
+        ],
+        [
+          "inline-react-svg"
+        ],
+        [
+          "transform-assets-import-to-string",
+          {
+            "baseDir": "static",
+            "baseUri": "/"
+          }
+        ],
+        [
+          "transform-remove-console"
+        ]
       ]
     }
   }
