--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
     "@mybit/network.js": "0.0.51",
+    "@next/bundle-analyzer": "^9.4.4",
     "@sentry/browser": "^5.19.2",
     "@sentry/webpack-plugin": "^1.12.0",
     "@zeit/next-bundle-analyzer": "0.1.2",
     "@zeit/next-css": "1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
+    "add": "^2.0.6",
     "airtable": "0.5.8",
     "antd": "3.13.6",
     "aws-sdk": "2.366.0",
@@ -40,9 +43,11 @@
     "is-ipfs": "^0.6.1",
     "js-cookie": "2.2.0",
     "less": "3.9.0",
+    "less-vars-to-js": "^1.3.0",
     "lint": "1.1.2",
     "multer": "1.4.1",
-    "next": "9.3.3",
+    "next": "9.4.4",
+    "next-compose-plugins": "^2.2.0",
     "node-sass-chokidar": "1.3.4",
     "nodemon": "1.18.10",
     "preact": "^10.0.0-beta.2",
@@ -65,10 +70,10 @@
     "web3": "1.0.0-beta.37"
   },
   "scripts": {
-    "dev": "NODE_ENV=development node lib/index.js",
+    "dev": "cross-env NODE_ENV=development node lib/index.js",
     "build": "next build && npm run export",
     "export": "next export -o build",
-    "start": "NODE_ENV=production node lib/index.js",
+    "start": " cross-envNODE_ENV=production node lib/index.js",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
     "compile-server": "rimraf lib/ && babel -d lib/ server/",
