--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@babel/cli": "7.2.3",
     "@babel/core": "7.2.2",
     "@babel/preset-env": "7.2.3",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "3.2.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "babel-watch": "7.0.0",
@@ -94,7 +95,7 @@
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.10.0",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
     "extract-text-webpack-plugin": "3.0.2",
