--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "add": "^2.0.6",
-    "airtable": "0.5.8",
+    "airtable": "^0.9.0",
     "antd": "3.13.6",
     "aws-sdk": "2.366.0",
     "axios": "0.19.0",
@@ -31,6 +31,7 @@
     "bizcharts": "3.4.1",
     "civic-sip-api": "1.1.0",
     "classnames": "2.2.6",
+    "cloudinary": "^1.22.0",
     "color-hash": "1.0.3",
     "compression": "1.7.3",
     "cors": "2.8.5",
