CI/CD: Update CircleCI, Travis config for updated vercel cli

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "11.15"
+  - "10"
 cache:
   directories:
   - node_modules
@@ -10,6 +10,6 @@ script:
   - GIT_HASH=$(git rev-parse --short HEAD)
   - echo ${GIT_HASH} > version
   - cp CONTRIBUTORS contributors
-  - BUILD_URL=$(npx now --name app.mybit.io -t $NOW_PROD_TOKEN)
-  - if [ "$TRAVIS_BRANCH" = "develop" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app-staging.mybit.io -t $NOW_PROD_TOKEN; fi
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app.mybit.io -t $NOW_PROD_TOKEN; fi
+  - BUILD_URL=$(npx vercel --name app-mybit-io -t $NOW_PROD_TOKEN)
+  - if [ "$TRAVIS_BRANCH" = "develop" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx vercel alias ${BUILD_URL} app-staging.mybit.io -t $NOW_PROD_TOKEN; fi
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx vercel alias ${BUILD_URL} app.mybit.io -t $NOW_PROD_TOKEN; fi
