--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "less": "3.9.0",
     "less-vars-to-js": "^1.3.0",
     "lint": "1.1.2",
+    "lodash": "^4.17.20",
     "multer": "1.4.1",
     "next": "9.4.4",
     "next-compose-plugins": "^2.2.0",
