List Asset: Update asset collateral percentage structure, use KNC as platform token in ropsten testnet

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "no-unused-expressions": ["error", { "allowShortCircuit": true }],
     "no-restricted-syntax": "off",
     "dot-notation": "off",
+    "max-len": "off",
     "no-console": ["error", {"allow": ["warn", "info", "error"]}],
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
