--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "nodemon": "1.18.10",
     "preact": "^10.0.0-beta.2",
     "prop-types": "15.7.2",
-    "react": "16.8",
-    "react-dom": "16.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-facebook-pixel": "0.1.2",
     "react-ga": "2.5.6",
     "react-geocode": "0.1.2",
