--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-inline-react-svg": "1.0.1",
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-transform-assets-import-to-string": "1.2.0",
+    "bignumber.js": "^9.0.0",
     "bizcharts": "3.4.1",
     "civic-sip-api": "1.1.0",
     "classnames": "2.2.6",
