Fix list-asset asset value changing bug

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
     "version": 2,
     "builds": [
       { "src": "next.config.js", "use": "@vercel/next" },
-      { "src": "apis/*.js", "use": "@vercel/node" }
+      { "src": "lib/index.js", "use": "@vercel/node" }
     ]
   }
