--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
     "react/no-multi-comp": "off",
     "react/jsx-filename-extension": 0,
     "react/prefer-stateless-function": "off",
-    "react/no-access-state-in-setstate": "off"
+    "react/no-access-state-in-setstate": "off",
+    "react/jsx-one-expression-per-line": "off"
   },
   "settings": {
     "import/resolver": {
