--- a/package.json
+++ b/package.json
@@ -74,10 +74,10 @@
     "web3": "1.0.0-beta.37"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node lib/index.js",
+    "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build && npm run export",
     "export": "next export -o build",
-    "start": " cross-env NODE_ENV=production node lib/index.js",
+    "start": " cross-env NODE_ENV=production next start",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
     "compile-server": "rimraf lib/ && babel -d lib/ server/",
