--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "web3": "1.0.0-beta.37"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development next dev",
+    "dev": "cross-env NODE_ENV=development NODE_OPTIONS='--max_old_space_size=4096' next dev",
     "build": "next build && npm run export",
     "export": "next export -o build",
     "start": " cross-env NODE_ENV=production next start",
