--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
-    "@mybit/network.js": "0.0.51",
+    "@mybit-v2/contracts": "^2.0.0",
+    "@mybit-v2/network.js": "^2.0.0",
     "@next/bundle-analyzer": "^9.4.4",
     "@sentry/browser": "^5.19.2",
     "@sentry/webpack-plugin": "^1.12.0",
@@ -70,6 +71,7 @@
     "react-scrollable-anchor": "^0.6.1",
     "react-twitter-conversion-tracker": "1.0.0",
     "recompose": "0.30.0",
+    "regenerator-runtime": "^0.13.7",
     "styled-components": "4.1.3",
     "web3": "1.0.0-beta.37"
   },
