--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     "lint": "1.1.2",
     "lodash": "^4.17.20",
     "multer": "1.4.1",
-    "next": "9.5.3",
+    "next": "^10.0.5",
     "next-compose-plugins": "^2.2.0",
     "node-sass-chokidar": "1.3.4",
     "nodemon": "1.18.10",
     "preact": "^10.0.0-beta.2",
     "prop-types": "15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-facebook-pixel": "0.1.2",
     "react-ga": "2.5.6",
     "react-geocode": "0.1.2",
