--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
     "react-twitter-conversion-tracker": "1.0.0",
     "recompose": "0.30.0",
     "regenerator-runtime": "^0.13.7",
+    "scrypt": "github:barrysteyn/node-scrypt#fb60a8d3c158fe115a624b5ffa7480f3a24b03fb",
     "styled-components": "4.1.3",
-    "web3": "1.0.0-beta.37"
+    "web3": "^1.3.6"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development NODE_OPTIONS='--max_old_space_size=4096' next dev",
