--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "terser": "3.14.1"
   },
   "engines": {
-    "node": "14.x"
+    "node": ">=10"
   },
   "dependencies": {
     "3box": "^1.9.0",
